# ploverStartWords

./: CHANGELOG.md  README.md  README.rst  readme.srt  setup.cfg  setup.py  tox.ini
.github/workflows/: build.yaml  release.yaml
plover_start_words/: meta.py
test/: test_blackbox.py
