[metadata]
name = plover_start_words
version = 1.0.2
description = Plugin for assigning strokes to different output if it starts or not a word
long_description = file: README.md
long_description_content_type = text/markdown
author = Noelia Ruiz
author_email = nrm1977@gmail.com
license = GNU General Public License v3 or later (GPLv3+)
url = https://github.com/nvdaes/plover_start_words
project_urls =
	Source Code = https://github.com/nvdaes/plover_start_words
	Issue Tracker = https://github.com/nvdaes/plover_start_words/issues
classifiers =
	Development Status :: 5 - Production/Stable
	Environment :: Plugins
	Intended Audience :: End Users/Desktop
	License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
	Operating System :: OS Independent
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
keywords = plover plover_plugin

[options]
zip_safe = True
python_requires = >=3.6
install_requires =
	plover>=4.0.0.dev9
include_package_data = True
packages =
	plover_start_words

[options.entry_points]
plover.meta =
	initial = plover_start_words.meta:initial

[options.extras_require]
test =
	plover>=4.0.0.dev9
	pytest>=3.0.1
lint = 
	flake8 ~= 3.7.7
	flake8-tabs == 2.1.0

# vim: commentstring=#\ %s list
